Update download button with google search console

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="YhyZKHrEMJaMpGGxIgvpVE339sphw62g2oRTrktioxQ" />
     <meta name="description" content="Get top-quality web development services from a skilled programmer and web developer with expertise in python, c++, HTML, CSS, JavaScript, PHP, and more. As a graduate in Computer Science, I am dedicated to creating user-friendly applications that deliver exceptional functionality and performance. Contact me today to discuss your web development needs.">
     <meta name="keywords" content="python, c++, HTML, CSS, JavaScript, ReactJs, Laravel, PHP">
     <title>Meet with Khan</title>
@@ -58,7 +59,7 @@
                   <div class="h2 title">Md Ashik Khan</div>
                   <p class="category text-white">Programmer, Web Developer and Graphic Designer</p>
                   <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact</a>
-                  <a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+                  <a class="btn btn-primary" href="Md-Ashik-khan_CV.pdf" download data-aos="zoom-in" data-aos-anchor="data-aos-anchor"><i class="fa fa-download"></i> Download CV</a>
                 </div>
               </div>
               <div class="section">
