Updated with Google analytic

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="YhyZKHrEMJaMpGGxIgvpVE339sphw62g2oRTrktioxQ" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6H4TGJ8RYT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-6H4TGJ8RYT');
+    </script>
     <meta name="description" content="Get top-quality web development services from a skilled programmer and web developer with expertise in python, c++, HTML, CSS, JavaScript, PHP, and more. As a graduate in Computer Science, I am dedicated to creating user-friendly applications that deliver exceptional functionality and performance. Contact me today to discuss your web development needs.">
     <meta name="keywords" content="python, c++, HTML, CSS, JavaScript, ReactJs, Laravel, PHP">
     <title>Meet with Khan</title>
