--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </script>
     <meta name="description" content="Get top-quality web development services from a skilled programmer and web developer with expertise in python, c++, HTML, CSS, JavaScript, PHP, and more. As a graduate in Computer Science, I am dedicated to creating user-friendly applications that deliver exceptional functionality and performance. Contact me today to discuss your web development needs.">
     <meta name="keywords" content="python, c++, HTML, CSS, JavaScript, ReactJs, Laravel, PHP">
-    <title>Meet with Khan</title>
+    <title>Meet with Khan | Md. Ashik Khan</title>
     
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
@@ -65,7 +65,7 @@
               <div class="container">
                 <div class="content-center">
                   <div class="cc-profile-image"><a href="#"><img src="images/ashik.jpg" alt="Image"/></a></div>
-                  <div class="h2 title">Md Ashik Khan</div>
+                  <div class="h2 title">Md. Ashik Khan</div>
                   <p class="category text-white">Programmer, Web Developer and Graphic Designer</p>
                   <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact</a>
                   <a class="btn btn-primary" href="Md-Ashik-khan_CV.pdf" download data-aos="zoom-in" data-aos-anchor="data-aos-anchor"><i class="fa fa-download"></i> Download CV</a>
@@ -92,7 +92,7 @@
                   <div class="card-body">
                     <div class="h4 mt-0 title">About</div>
                     <p>Hello! I am Md. Ashik Khan. Programmer, Web Developer and Graphic Designer.</p>
-                    <p style="text-align: justify;">As a recent BSc graduate in Computer Science, I am a passionate programmer and web developer with a strong technical background. My expertise includes proficiency in programming languages such as Python, C++, HTML, CSS, JavaScript, and PHP, as well as a focus on creating user-friendly applications that deliver exceptional functionality and performance. Although I do not have any industrial experience yet, I am eager to apply my skills to real-world projects. With a willingness to learn, a strong work ethic, and a commitment to excellence, I am confident that I can deliver high-quality work and make a positive impact as a programmer and web developer.</p>
+                    <p style="text-align: justify;">As a graduate in Computer Science, I am a passionate programmer and web app developer with a strong technical background. My expertise includes proficiency in programming languages such as Python, C++, JavaScript, and PHP, as well as a focus on creating user-friendly applications that deliver exceptional functionality and performance. Although I do not have any industrial experience yet, I am eager to apply my skills to real-world projects. With a willingness to learn, a strong work ethic, and a commitment to excellence, I am confident that I can deliver high-quality work and make a positive impact as a programmer and web app developer.</p>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
