Recaptcha added to form

--- a/index.html
+++ b/index.html
@@ -499,6 +499,7 @@
                               </div>
                               <div class="row">
                                 <div class="col">
+                                  <div class="g-recaptcha" data-sitekey="6Lc5FaEkAAAAAImmc9nyh5q_QUaUojX_5UK-LO-l"></div>
                                   <button class="btn btn-primary" type="submit">Send</button>
                                 </div>
                               </div>
