--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
-    <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
+    <!-- <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css?ver=1.1.0" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -500,6 +501,10 @@
                               <div class="row">
                                 <div class="col">
                                   <div class="g-recaptcha" data-sitekey="6Lc5FaEkAAAAAImmc9nyh5q_QUaUojX_5UK-LO-l"></div>
+                                </div>
+                              </div>
+                              <div class="row">
+                                <div class="col">
                                   <button class="btn btn-primary" type="submit">Send</button>
                                 </div>
                               </div>
@@ -540,7 +545,8 @@
     </footer>
     <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
     <script src="js/core/popper.min.js?ver=1.1.0"></script>
-    <script src="js/core/bootstrap.min.js?ver=1.1.0"></script>
+    <!-- <script src="js/core/bootstrap.min.js?ver=1.1.0"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/now-ui-kit.js?ver=1.1.0"></script>
     <script src="js/aos.js?ver=1.1.0"></script>
     <script src="scripts/main.js?ver=1.1.0"></script>
