Updated with best

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
       gtag('config', 'G-6H4TGJ8RYT');
     </script>
-    <meta name="description" content="Get top-quality web development services from a skilled programmer and web developer with expertise in python, c++, HTML, CSS, JavaScript, PHP, and more. As a graduate in Computer Science, I am dedicated to creating user-friendly applications that deliver exceptional functionality and performance. Contact me today to discuss your web development needs.">
-    <meta name="keywords" content="python, c++, HTML, CSS, JavaScript, ReactJs, Laravel, PHP">
+    <meta name="description" content="Get top-quality web development services from a skilled programmer and web app developer with expertise in python, c++, HTML, CSS, JavaScript, PHP, and more. As a graduate in Computer Science, I am dedicated to creating user-friendly applications that deliver exceptional functionality and performance. Contact me today to discuss your web development needs.">
+    <meta name="keywords" content="python, c++, HTML, CSS, JavaScript, ReactJs, Laravel, PHP, web development">
     <title>Meet with Khan | Md. Ashik Khan</title>
     
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
-    <!-- <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">-->
     <link href="css/main.css?ver=1.1.0" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -546,8 +546,8 @@
     </footer>
     <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
     <script src="js/core/popper.min.js?ver=1.1.0"></script>
-    <!-- <script src="js/core/bootstrap.min.js?ver=1.1.0"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+     <script src="js/core/bootstrap.min.js?ver=1.1.0"></script> 
+    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>-->
     <script src="js/now-ui-kit.js?ver=1.1.0"></script>
     <script src="js/aos.js?ver=1.1.0"></script>
     <script src="scripts/main.js?ver=1.1.0"></script>
