Bing in meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="YhyZKHrEMJaMpGGxIgvpVE339sphw62g2oRTrktioxQ" />
+    <meta name="msvalidate.01" content="C289232581A9F8603B2E931682882421" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6H4TGJ8RYT"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
