--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       gtag('config', 'G-6H4TGJ8RYT');
     </script>
     <meta name="description" content="Get top-quality web development services from a skilled programmer and web app developer with expertise in python, c++, HTML, CSS, JavaScript, PHP, and more. As a graduate in Computer Science, I am dedicated to creating user-friendly applications that deliver exceptional functionality and performance. Contact me today to discuss your web development needs.">
-    <meta name="keywords" content="python, c++, HTML, CSS, JavaScript, ReactJs, Laravel, PHP, web development">
+    <meta name="keywords" content="Md. Ashik Khan, Ashik, Khan, meet with khan, Meet with Khan | Md. Ashik Khan, python, c++, HTML, CSS, JavaScript, ReactJs, Laravel, PHP, web development">
     <title>Meet with Khan | Md. Ashik Khan</title>
     
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
