some info changed by me

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
                 </div>
                 <div class="row">
                   <div class="col-md-6">
-                    <div class="progress-container progress-primary"><span class="progress-badge">Laravel</span>
+                    <div class="progress-container progress-primary"><span class="progress-badge">Networking</span>
                       <div class="progress">
-                        <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
+                        <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
                       </div>
                     </div>
                   </div>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="row">
                   <div class="col-md-6">
-                    <div class="progress-container progress-primary"><span class="progress-badge">Bootstrap</span>
+                    <div class="progress-container progress-primary"><span class="progress-badge">Laravel</span>
                       <div class="progress">
                         <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
                       </div>
@@ -329,8 +329,8 @@
                 </div>
                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
-                    <div class="h5">Intern</div>
-                    <p style="text-align: justify;">I completed an internship at <a href="https://texonltd.com/" target="_blank" >Texon Limited</a> where I gained hands-on experience in developing a single page application using MERN. During the internship, I worked closely with a team of developers to build and implement the application, utilizing my skills in ReactJS to create a responsive and user-friendly interface. This experience allowed me to enhance my skills in developing dynamic web applications and gave me valuable exposure to real-world software development practices.</p>
+                    <div class="h5">Industrial Attachment</div>
+                    <p style="text-align: justify;">I completed an industrial attachment at <a href="https://texonltd.com/" target="_blank" >Texon Limited</a> where I gained hands-on experience in developing a single page application using MERN. During the internship, I worked closely with a team of developers to build and implement the application, utilizing my skills in ReactJS to create a responsive and user-friendly interface. This experience allowed me to enhance my skills in developing dynamic web applications and gave me valuable exposure to real-world software development practices.</p>
                   </div>
                 </div>
               </div>
@@ -345,7 +345,7 @@
                 </div>
                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
-                    <div class="h5">Intern</div>
+                    <div class="h5">Industrial Attachment</div>
                     <p style="text-align: justify;">I attended an industrial training program on computer hardware and networking at i-Tech Computer Institute. During the training, I gained practical knowledge and hands-on experience in computer hardware, including building and repairing computer systems, installing operating systems, and troubleshooting hardware issues. Additionally, I learned about computer networks, including network topology, configuration, and maintenance. This experience allowed me to enhance my skills in computer hardware and networking, making me more proficient in solving technical issues related to computer systems and networks.</p>
                   </div>
                 </div>
@@ -422,12 +422,12 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <div class="row">
-                      <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/obydur.jpg" alt="Sir"/>
-                        <div class="h5 pt-2">Obydur Rahaman</div>
-                        <p class="category">Assistant Professor / <a target="_blank" href="http://darshanagovernmentcollege.jessoreboard.gov.bd/">DGC</a> </p>
+                      <div class="col-lg-2 col-md-3 cc-reference-header"><img src="https://profile.duet.ac.bd/public/profile_photo/1619716384_287.png" alt="Sir"/>
+                        <div class="h5 pt-2">Dr. Mohammod Abul Kashem</div>
+                        <p class="category">Professor / <a target="_blank" href="https://duet.ac.bd/">DUET</a> </p>
                       </div>
                       <div class="col-lg-10 col-md-9">
-                        <p style="text-align: justify;"> My honourable teachar "Obydur Rahaman" has recommended me as an energetic and brilliant student. This recognition is a testament to my dedication and enthusiasm for learning, and my ability to excel in my studies. I am grateful for his recommendation, and am proud to have earned the recognition of such a respected and accomplished individual.</p>
+                        <p style="text-align: justify;"> My honourable teachar "Dr. Mohammod Abul Kashem" has recommended me as an energetic and brilliant student. This recognition is a testament to my dedication and enthusiasm for learning, and my ability to excel in my studies. I am grateful for his recommendation, and am proud to have earned the recognition of such a respected and accomplished individual.</p>
                       </div>
                     </div>
                   </div>
@@ -435,15 +435,15 @@
                   <div class="carousel-item">
                     <div class="row">
                       <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/obydur.jpg" alt="Sir"/>
-                        <div class="h5 pt-2">Obydur Rahaman</div>
-                        <p class="category">Assistant Professor / <a target="_blank" href="http://darshanagovernmentcollege.jessoreboard.gov.bd/">DGC</a> </p>
+                        <div class="h5 pt-2">Md. Tauhidul Alam (Tapan)</div>
+                        <p class="category">Retd. Assistant Engineer / <a target="_blank" href="https://badc.gov.bd/">BADC</a> </p>
                       </div>
                       <div class="col-lg-10 col-md-9">
-                        <p style="text-align: justify;"> My honourable teachar "Obydur Rahaman" has recommended me as an energetic and brilliant student. This recognition is a testament to my dedication and enthusiasm for learning, and my ability to excel in my studies. I am grateful for his recommendation, and am proud to have earned the recognition of such a respected and accomplished individual.</p>
+                        <p style="text-align: justify;"> I wanted to take a moment to express how proud and satisfied I am with your achievements. Your dedication to your studies and your passion for programming and networking are truly commendable. Keep up the excellent work, and I have no doubt that you will continue to excel in your chosen field.</p>
                       </div>
                     </div>
                   </div>
-                  <div class="carousel-item">
+              <!-- <div class="carousel-item">
                     <div class="row">
                       <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/obydur.jpg" alt="Sir"/>
                         <div class="h5 pt-2">Obydur Rahaman</div>
@@ -454,7 +454,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div>-->
           </div>
         </div>
         </div>
