Ref images updated by me

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <div class="row">
-                      <div class="col-lg-2 col-md-3 cc-reference-header"><img src="https://profile.duet.ac.bd/public/profile_photo/1619716384_287.png" alt="Sir"/>
+                      <div class="col-lg-2 col-md-3 cc-reference-header"><img src="R1_sir.png" alt="Sir"/>
                         <div class="h5 pt-2">Dr. Mohammod Abul Kashem</div>
                         <p class="category">Professor / <a target="_blank" href="https://duet.ac.bd/">DUET</a> </p>
                       </div>
@@ -434,7 +434,7 @@
                   
                   <div class="carousel-item">
                     <div class="row">
-                      <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/obydur.jpg" alt="Sir"/>
+                      <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/R2_uncle.jpg" alt="Sir"/>
                         <div class="h5 pt-2">Md. Tauhidul Alam (Tapan)</div>
                         <p class="category">Retd. Assistant Engineer / <a target="_blank" href="https://badc.gov.bd/">BADC</a> </p>
                       </div>
