Link to updated CV

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <div class="h2 title">Md. Ashik Khan</div>
                   <p class="category text-white">Programmer, Web Developer and Graphic Designer</p>
                   <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact</a>
-                  <a class="btn btn-primary" href="Md-Ashik-khan_CV.pdf" download data-aos="zoom-in" data-aos-anchor="data-aos-anchor"><i class="fa fa-download"></i> Download CV</a>
+                  <a class="btn btn-primary" href="CV_Md Ashik Khan.pdf" download data-aos="zoom-in" data-aos-anchor="data-aos-anchor"><i class="fa fa-download"></i> Download CV</a>
                 </div>
               </div>
               <div class="section">
@@ -422,7 +422,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <div class="row">
-                      <div class="col-lg-2 col-md-3 cc-reference-header"><img src="R1_sir.png" alt="Sir"/>
+                      <div class="col-lg-2 col-md-3 cc-reference-header"><img src="https://profile.duet.ac.bd/public/profile_photo/1619716384_287.png" alt="Sir"/>
                         <div class="h5 pt-2">Dr. Mohammod Abul Kashem</div>
                         <p class="category">Professor / <a target="_blank" href="https://duet.ac.bd/">DUET</a> </p>
                       </div>
@@ -443,7 +443,7 @@
                       </div>
                     </div>
                   </div>
-              <!-- <div class="carousel-item">
+              <div class="carousel-item">
                     <div class="row">
                       <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/obydur.jpg" alt="Sir"/>
                         <div class="h5 pt-2">Obydur Rahaman</div>
@@ -454,7 +454,7 @@
                       </div>
                     </div>
                   </div>
-                </div>-->
+                </div>
           </div>
         </div>
         </div>
