about me info changed

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                 <div class="col-lg-6 col-md-12">
                   <div class="card-body">
                     <div class="h4 mt-0 title">About</div>
-                    <p>Hello! I am Md. Ashik Khan. Programmer, Web Developer and Graphic Designer.</p>
-                    <p style="text-align: justify;">As a graduate in Computer Science, I am a passionate programmer and web app developer with a strong technical background. My expertise includes proficiency in programming languages such as Python, C++, JavaScript, and PHP, as well as a focus on creating user-friendly applications that deliver exceptional functionality and performance. Although I do not have any industrial experience yet, I am eager to apply my skills to real-world projects. With a willingness to learn, a strong work ethic, and a commitment to excellence, I am confident that I can deliver high-quality work and make a positive impact as a programmer and web app developer.</p>
+                    <p>Hello! I am Md. Ashik Khan.</p>
+                    <p style="text-align: justify;">As a CSE graduate, I possess a strong affinity for both programming and networking. With a solid foundation in computer science, I bring enthusiasm for solving complex problems and a passion for optimizing network performance. Although I do not have any industrial experience yet, I am eager to apply my skills to real-world projects. With a willingness to learn, a strong work ethic, and a commitment to excellence, I am confident that I can deliver high-quality work and make a positive impact as a programmer or as a network engineer.</p>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
