--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(26, 140, 210);" href="https://twitter.com/aashikkpi" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
                     <a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(10, 102, 194);" href="https://www.linkedin.com/in/md-ashik-khan1997/" rel="tooltip" title="Follow me on Linkedin"><i class="fa fa-linkedin"></i></a>
                     <a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(247, 33, 44);" href="https://www.instagram.com/md__ashik__khan/" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a>
-                    a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(99, 242, 135);" href="https://github.com/meetwithkhan" rel="tooltip" title="Follow me on Github"><i class="fa fa-github"></i></a>
+                    <a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(99, 242, 135);" href="https://github.com/meetwithkhan" rel="tooltip" title="Follow me on Github"><i class="fa fa-github"></i></a>
                   </div>
                 </div>
               </div>
