--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="content-center">
                   <div class="cc-profile-image"><a href="#"><img src="images/ashik.jpg" alt="Image"/></a></div>
                   <div class="h2 title">Md. Ashik Khan</div>
-                  <p class="category text-white">Programmer, Web Developer and Graphic Designer</p>
+                  <p class="category text-white">Trainee Engineer | F@H | Programmer | Web Developer</p>
                   <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact</a>
                   <a class="btn btn-primary" href="CV_Md Ashik Khan.pdf" download data-aos="zoom-in" data-aos-anchor="data-aos-anchor"><i class="fa fa-download"></i> Download CV</a>
                 </div>
@@ -77,11 +77,11 @@
               <div class="section">
                 <div class="container">
                   <div class="button-container">
-                    <a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(5, 112, 230);" href="https://www.facebook.com/mdashik.khan2" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a>
-                    <a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(26, 140, 210);" href="https://twitter.com/aashikkpi" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
-                    <a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(10, 102, 194);" href="https://www.linkedin.com/in/md-ashik-khan1997/" rel="tooltip" title="Follow me on Linkedin"><i class="fa fa-linkedin"></i></a>
-                    <a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(247, 33, 44);" href="https://www.instagram.com/md__ashik__khan/" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a>
-                    <a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(30, 48, 80);" href="https://github.com/meetwithkhan" rel="tooltip" title="Follow me on Github"><i class="fa fa-github"></i></a>
+                    <a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(5, 112, 230);" href="https://www.facebook.com/mdashik.khan2" target="_blank rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a>
+                    <a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(26, 140, 210);" href="https://twitter.com/aashikkpi" target="_blank rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
+                    <a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(10, 102, 194);" href="https://www.linkedin.com/in/md-ashik-khan1997/" target="_blank rel="tooltip" title="Follow me on Linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(247, 33, 44);" href="https://www.instagram.com/md__ashik__khan/" target="_blank rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a>
+                    <a class="btn btn-default btn-round btn-lg btn-icon" style="background-color: rgb(30, 48, 80);" href="https://github.com/meetwithkhan" target="_blank rel="tooltip" title="Follow me on Github"><i class="fa fa-github"></i></a>
                   </div>
                 </div>
               </div>
@@ -96,7 +96,7 @@
                   <div class="card-body">
                     <div class="h4 mt-0 title">About</div>
                     <p>Hello! I am Md. Ashik Khan.</p>
-                    <p style="text-align: justify;">As a CSE graduate, I possess a strong affinity for both programming and networking. With a solid foundation in computer science, I bring enthusiasm for solving complex problems and a passion for optimizing network performance. Although I do not have any industrial experience yet, I am eager to apply my skills to real-world projects. With a willingness to learn, a strong work ethic, and a commitment to excellence, I am confident that I can deliver high-quality work and make a positive impact as a programmer or as a network engineer.</p>
+                    <p style="text-align: justify;">As a CSE graduate, I possess a strong affinity for both programming and networking. With a solid foundation in computer science, I bring enthusiasm for solving complex problems and a passion for optimizing network performance. I am eager to apply my skills to real-world projects. With a willingness to learn, a strong work ethic, and a commitment to excellence, I am confident that I can deliver high-quality work and make a positive impact as a programmer or as a network engineer.</p>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
@@ -104,7 +104,7 @@
                     <div class="h4 mt-0 title">Basic Information</div>
                     <div class="row">
                       <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-                      <div class="col-sm-8" id="ageFromNow">24</div>
+                      <div class="col-sm-8" id="ageFromNow">26</div>
                     </div>
                     <div class="row mt-3">
                       <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
@@ -320,6 +320,22 @@
         <div class="section" id="experience">
           <div class="container cc-experience">
             <div class="h4 text-center mb-4 title">Work Experience</div>
+            <div class="card">
+              <div class="row">
+                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body cc-experience-header">
+                    <p>Dec 2023 - Present </p>
+                    <div class="h5"><a style="color: white;" href="https://www.fiberathome.net/" target="_blank">Fiber@Home Limited</a></div>
+                  </div>
+                </div>
+                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body">
+                    <div class="h5">Trainee Engineer</div>
+                    <p style="text-align: justify;">Thrilled to kick off my journey as a Trainee Engineer at<a href="https://www.fiberathome.net/" target="_blank" >Fiber@Home Ltd</a>. My role revolves around monitoring our Network Management System (NMS) for optimal performance and responding promptly to client queries. Excited to contribute to seamless connectivity and customer satisfaction in this dynamic environment.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="card">
               <div class="row">
                 <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
