Work Experience updated

--- a/index.html
+++ b/index.html
@@ -325,7 +325,23 @@
               <div class="row">
                 <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body cc-experience-header">
-                    <p>Dec 2023 - Present </p>
+                    <p>Mar 2024 - Present </p>
+                    <div class="h5"><a style="color: white;" href="https://www.fiberathome.net/" target="_blank">Fiber@Home Limited</a></div>
+                  </div>
+                </div>
+                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body">
+                    <div class="h5">Engineer</div>
+                    <p style="text-align: justify;">As an Engineer at at <a href="https://www.fiberathome.net/" target="_blank" >Fiber@Home Ltd</a>, I am responsible for monitoring the Network Management System (NMS) to ensure optimal network performance and responding to client queries. Additionally, I now oversee the backbone links and BTS sites of major telecom operators such as <b>Grameenphone, Banglalink, Robi, and Teletalk</b>. This expanded role allows me to contribute to maintaining seamless connectivity and delivering reliable service to both clients and operators.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="row">
+                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body cc-experience-header">
+                    <p>Dec 2023 - Mar 2024 </p>
                     <div class="h5"><a style="color: white;" href="https://www.fiberathome.net/" target="_blank">Fiber@Home Limited</a></div>
                   </div>
                 </div>
