--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="content-center">
                   <div class="cc-profile-image"><a href="#"><img src="images/ashik.jpg" alt="Image"/></a></div>
                   <div class="h2 title">Md. Ashik Khan</div>
-                  <p class="category text-white">Trainee Engineer | F@H | Programmer | Web Developer</p>
+                  <p class="category text-white">Network Engineer | F@H | Programmer | Web Developer</p>
                   <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact</a>
                   <a class="btn btn-primary" href="CV_Md Ashik Khan.pdf" download data-aos="zoom-in" data-aos-anchor="data-aos-anchor"><i class="fa fa-download"></i> Download CV</a>
                 </div>
@@ -97,7 +97,7 @@
                   <div class="card-body">
                     <div class="h4 mt-0 title">About</div>
                     <p>Hello! I am Md. Ashik Khan.</p>
-                    <p style="text-align: justify;">As a CSE graduate, I possess a strong affinity for both programming and networking. With a solid foundation in computer science, I bring enthusiasm for solving complex problems and a passion for optimizing network performance. I am eager to apply my skills to real-world projects. With a willingness to learn, a strong work ethic, and a commitment to excellence, I am confident that I can deliver high-quality work and make a positive impact as a programmer or as a network engineer.</p>
+                    <p style="text-align: justify;">I’m a CSE graduate passionate about programming and networking. As an Engineer at Fiber@Home Ltd., I monitor NMS and manage BTS sites for telecom operators like Grameenphone, Banglalink, Robi, and Teletalk. Previously, I worked as a Trainee Engineer, gaining experience in network monitoring and client support.<br />With a strong work ethic and a commitment to continuous learning, I’m eager to apply my skills in solving complex problems and optimizing network performance.</p>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
