Training section added

--- a/index.html
+++ b/index.html
@@ -353,40 +353,9 @@
                 </div>
               </div>
             </div>
-            <div class="card">
-              <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-experience-header">
-                    <p>Dec 2021 - Feb 2022</p>
-                    <div class="h5"><a style="color: white;" href="https://texonltd.com/" target="_blank" >Texon Limited</a></div>
-                  </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body">
-                    <div class="h5">Industrial Attachment</div>
-                    <p style="text-align: justify;">I completed an industrial attachment at <a href="https://texonltd.com/" target="_blank" >Texon Limited</a> where I gained hands-on experience in developing a single page application using MERN. During the internship, I worked closely with a team of developers to build and implement the application, utilizing my skills in ReactJS to create a responsive and user-friendly interface. This experience allowed me to enhance my skills in developing dynamic web applications and gave me valuable exposure to real-world software development practices.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-experience-header">
-                    <p>Aug 2016 - Nov 2016</p>
-                    <div class="h5">i-Tech Computer Institute</div>
-                  </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body">
-                    <div class="h5">Industrial Attachment</div>
-                    <p style="text-align: justify;">I attended an industrial training program on computer hardware and networking at i-Tech Computer Institute. During the training, I gained practical knowledge and hands-on experience in computer hardware, including building and repairing computer systems, installing operating systems, and troubleshooting hardware issues. Additionally, I learned about computer networks, including network topology, configuration, and maintenance. This experience allowed me to enhance my skills in computer hardware and networking, making me more proficient in solving technical issues related to computer systems and networks.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
+
         <div class="section" id="education">
           <div class="container cc-education">
             <div class="h4 text-center mb-4 title">Education</div>
@@ -437,6 +406,43 @@
                     <div class="h5">Business Studies</div>
                     <p class="category"><a href="https://dinmonisecondaryschool.jessoreboard.gov.bd/" target="_blank">Dinmoni High School, Kushtia</a></p>
                     <p style="text-align: justify;">I have completed my Secondary School Certificate (SSC) or high school education in Business Studies. During my program, I have studied a wide range of business-related subjects, including accounting, finance, economics, management, and marketing.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="section" id="Training">
+          <div class="container cc-experience">
+            <div class="h4 text-center mb-4 title">Training</div>
+            <div class="card">
+              <div class="row">
+                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body cc-experience-header">
+                    <p>Dec 2021 - Feb 2022</p>
+                    <div class="h5"><a style="color: white;" href="https://texonltd.com/" target="_blank" >Texon Limited</a></div>
+                  </div>
+                </div>
+                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body">
+                    <div class="h5">Industrial Attachment</div>
+                    <p style="text-align: justify;">I completed an industrial attachment at <a href="https://texonltd.com/" target="_blank" >Texon Limited</a> where I gained hands-on experience in developing a single page application using MERN. During the internship, I worked closely with a team of developers to build and implement the application, utilizing my skills in ReactJS to create a responsive and user-friendly interface. This experience allowed me to enhance my skills in developing dynamic web applications and gave me valuable exposure to real-world software development practices.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="row">
+                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body cc-experience-header">
+                    <p>Aug 2016 - Nov 2016</p>
+                    <div class="h5">i-Tech Computer Institute</div>
+                  </div>
+                </div>
+                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body">
+                    <div class="h5">Industrial Attachment</div>
+                    <p style="text-align: justify;">I attended an industrial training program on computer hardware and networking at i-Tech Computer Institute. During the training, I gained practical knowledge and hands-on experience in computer hardware, including building and repairing computer systems, installing operating systems, and troubleshooting hardware issues. Additionally, I learned about computer networks, including network topology, configuration, and maintenance. This experience allowed me to enhance my skills in computer hardware and networking, making me more proficient in solving technical issues related to computer systems and networks.</p>
                   </div>
                 </div>
               </div>
