--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <div class="card-body">
                     <div class="h4 mt-0 title">About</div>
                     <p>Hello! I am Md. Ashik Khan.</p>
-                    <p style="text-align: justify;">I’m a CSE graduate passionate about programming and networking. As an Engineer at Fiber@Home Ltd., I monitor NMS and manage BTS sites for telecom operators like Grameenphone, Banglalink, Robi, and Teletalk. Previously, I worked as a Trainee Engineer, gaining experience in network monitoring and client support.<br />With a strong work ethic and a commitment to continuous learning, I’m eager to apply my skills in solving complex problems and optimizing network performance.</p>
+                    <p style="text-align: justify;">I’m a CSE graduate passionate about programming and networking. As an Engineer at Fiber@Home Ltd., I monitor NMS and oversee the major telecom operators' backbone links and BTS sites like Grameenphone, Banglalink, Robi, and Teletalk. Previously, I worked as a Trainee Engineer, gaining experience in network monitoring and client support.<br />With a strong work ethic and a commitment to continuous learning, I’m eager to apply my skills in solving complex problems and optimizing network performance.</p>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
@@ -136,7 +136,7 @@
               <div class="card-body">
                 <div class="row">
                   <div class="col-md-6">
-                    <div class="progress-container progress-primary"><span class="progress-badge">Python</span>
+                    <div class="progress-container progress-primary"><span class="progress-badge">Network Security</span>
                       <div class="progress">
                         <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
                       </div>
@@ -152,9 +152,9 @@
                 </div>
                 <div class="row">
                   <div class="col-md-6">
-                    <div class="progress-container progress-primary"><span class="progress-badge">Networking</span>
+                    <div class="progress-container progress-primary"><span class="progress-badge">Laravel</span>
                       <div class="progress">
-                        <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+                        <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
                       </div>
                     </div>
                   </div>
@@ -168,14 +168,14 @@
                 </div>
                 <div class="row">
                   <div class="col-md-6">
-                    <div class="progress-container progress-primary"><span class="progress-badge">Laravel</span>
+                    <div class="progress-container progress-primary"><span class="progress-badge">Tailwind</span>
                       <div class="progress">
-                        <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
+                        <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="progress-container progress-primary"><span class="progress-badge">Adobe Photoshoot/Illustrator</span>
+                    <div class="progress-container progress-primary"><span class="progress-badge">Graphic Design</span>
                       <div class="progress">
                         <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
                       </div>
@@ -332,7 +332,7 @@
                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
                     <div class="h5">Engineer</div>
-                    <p style="text-align: justify;">As an Engineer at at <a href="https://www.fiberathome.net/" target="_blank" >Fiber@Home Ltd</a>, I am responsible for monitoring the Network Management System (NMS) to ensure optimal network performance and responding to client queries. Additionally, I now oversee the backbone links and BTS sites of major telecom operators such as <b>Grameenphone, Banglalink, Robi, and Teletalk</b>. This expanded role allows me to contribute to maintaining seamless connectivity and delivering reliable service to both clients and operators.</p>
+                    <p style="text-align: justify;">As an Engineer at at <a href="https://www.fiberathome.net/" target="_blank" >Fiber@Home Ltd</a>, I am responsible for monitoring the Network Management System (NMS) to ensure optimal network performance and responding to client queries. Additionally, I now oversee major telecom operators' backbone links and BTS sites such as <b>Grameenphone, Banglalink, Robi, and Teletalk</b>. This expanded role allows me to contribute to maintaining seamless connectivity and delivering reliable service to both clients and operators.</p>
                   </div>
                 </div>
               </div>
