--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   <div class="h2 title">Md. Ashik Khan</div>
                   <p class="category text-white">Network Engineer | F@H | Programmer | Web Developer</p>
                   <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact</a>
-                  <a class="btn btn-primary" href="CV_Md Ashik Khan.pdf" download data-aos="zoom-in" data-aos-anchor="data-aos-anchor"><i class="fa fa-download"></i> Download CV</a>
+                  <a class="btn btn-primary" href="CV_Md_Ashik_Khan.pdf" download data-aos="zoom-in" data-aos-anchor="data-aos-anchor"><i class="fa fa-download"></i> Download CV</a>
                 </div>
               </div>
               <div class="section">
